--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "axios": "^1.1.3",
+    "classnames": "^2.3.2",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
     "next-auth": "^4.17.0",
+    "overlayscrollbars": "1.13.2",
+    "overlayscrollbars-react": "0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
