--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.17.0",
     "overlayscrollbars": "1.13.2",
     "overlayscrollbars-react": "0.3.0",
+    "rc-slider": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
