--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.9",
     "axios": "^1.1.3",
     "classnames": "^2.3.2",
+    "d3-scale-chromatic": "^3.0.0",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
@@ -26,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "recharts": "^2.2.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
