--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "rc-slider": "^10.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "recharts": "^2.2.0",
     "typescript": "4.9.3"
