--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
     "incremental": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["./*"],
       "@assets/*": ["src/assets/*"],
+      "@assets": ["src/assets"],
       "@components/*": ["src/components/*"],
       "@components": ["src/components"],
       "@data/*": ["src/data/*"],
